--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: rgb(0, 0, 2); */
+  background-color: whitesmoke;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,7 +21,7 @@
   padding: 0;
   text-align: center;
   overflow-x: hidden;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 body {
@@ -42,4 +43,8 @@ code {
   border: 1px solid #000;
   box-shadow: 0 0 0 20px #000, 0 0 0 30px #000;
   /* border-image: url('/media/examples/border-diamonds.png') 30; */
+}
+
+.homm3-box {
+
 }
