refac: project structure and add docs in readme

--- a/src/common/index.css
+++ b/src/common/index.css
@@ -1,4 +1,4 @@
-@import './common/scrollbar.css';
+@import './scrollbar.css';
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
